[package]
name = "mpl-stoneage"
version = "0.1.0"
description = "NFT OTC market"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_stoneage"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []


[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = {version="~0.24.2", features=["init-if-needed"]}
anchor-spl = {version="~0.24.2"}
spl-token = "~3.2.0"
mpl-token-metadata = { features = [ "no-entrypoint" ], version="~1.2.10" }

[dev-dependencies]
anchor-client = "~0.24.2"
solana-program-test = "~1.9.28"
solana-program = "~1.9.28"
solana-sdk = "~1.9.28"
spl-associated-token-account = "~1.0.3"
